Update Single UI Tissue.html

--- a/Single UI Tissue.html
+++ b/Single UI Tissue.html
@@ -687,32 +687,6 @@
         // Initialize Game
         window.onload = initTopicButtons;
     </script>
-<style>
-    .back-button {
-        display: inline-block;
-        padding: 10px 20px;
-        margin-top: 20px; /* बटन के ऊपर थोड़ी जगह */
-        background-color: #4CAF50; /* हरा रंग */
-        color: white;
-        text-align: center;
-        text-decoration: none;
-        font-size: 16px;
-        border-radius: 8px; /* गोल कोने */
-        cursor: pointer;
-        transition: background-color 0.3s ease; /* होवर इफेक्ट के लिए */
-        box-shadow: 2px 2px 5px rgba(0,0,0,0.2); /* थोड़ा शैडो */
-    }
-
-    .back-button:hover {
-        background-color: #45a049; /* होवर करने पर थोड़ा गहरा हरा */
-        box-shadow: 3px 3px 7px rgba(0,0,0,0.3); /* होवर पर शैडो थोड़ी गहरी */
-    }
-
-    /* बटन को बीच में लाने के लिए (वैकल्पिक) */
-    .button-container {
-        text-align: center;
-        width: 100%; /* पूरी चौड़ाई लें */
-    }
-</style>
+<a href="index.html">वापस मुख्य मेनू पर जाएँ(Return to Main Menu)</a>
 </body>
 </html>
