--- a/edugames.html
+++ b/edugames.html
@@ -544,5 +544,6 @@
         // Initialize Game
         window.onload = initTopicButtons;
     </script>
+<a href="index.html">वापस मुख्य मेनू पर जाएँ(Return to Main Menu)</a>
 </body>
 </html>
