--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <a href="TISSUES.html">टिशू (TISSUES)</a><br>
     <a href="edugames.html">एजुगेम्स</a><br>
     <a href="laws%20of%20motion.html">गति के नियम (Laws of Motion)</a><br>
+    <a href="EDUGAMES%20Is%20matters%20around%20us%20pure.html">Matters around us</a><br>
+    
 
 </body>
 </html>
