--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="hi">
 <head>
   <meta charset="UTF-8">
@@ -6,68 +6,78 @@
   <title>Class 9th Science – Main Menu</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f0f4f9;
-      color: #222;
+      background: #000; /* AMOLED black background */
+      color: #e0f7fa;
     }
     header {
-      background: #1a237e;
+      background: linear-gradient(90deg, #00e5ff, #000);
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 25px;
+      box-shadow: 0 4px 15px rgba(0, 229, 255, 0.4);
     }
     header h1 {
       margin: 0;
       font-size: 2rem;
+      font-weight: bold;
     }
     header p {
       margin: 5px 0 0;
       font-size: 1rem;
+      color: #b2ebf2;
     }
     .container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
+      gap: 25px;
       padding: 30px;
     }
     .card {
-      background: white;
-      border-radius: 12px;
+      background: linear-gradient(135deg, #00e5ff, #000);
+      border-radius: 14px;
       padding: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       text-align: center;
-      transition: transform 0.2s, box-shadow 0.2s;
+      color: #e0f7fa;
+      box-shadow: 0 6px 15px rgba(0,229,255,0.5);
+      transition: transform 0.3s, box-shadow 0.3s;
+      cursor: pointer;
     }
     .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+      transform: translateY(-8px) scale(1.02);
+      box-shadow: 0 8px 25px rgba(0,229,255,0.8);
     }
     .card h2 {
       margin: 10px 0;
       font-size: 1.3rem;
-      color: #1a237e;
+      color: #e0f7fa;
+      text-shadow: 0 0 8px rgba(0,229,255,0.8);
     }
     .card a {
       display: inline-block;
-      margin-top: 10px;
-      padding: 10px 15px;
+      margin-top: 12px;
+      padding: 10px 18px;
       text-decoration: none;
-      background: #1a237e;
-      color: white;
+      background: #00e5ff;
+      color: #000;
+      font-weight: bold;
       border-radius: 8px;
-      transition: background 0.3s;
+      transition: background 0.3s, transform 0.2s;
     }
     .card a:hover {
-      background: #3949ab;
+      background: #00bcd4;
+      transform: scale(1.05);
     }
     footer {
-      background: #1a237e;
-      color: white;
+      background: #000;
+      color: #00e5ff;
       text-align: center;
-      padding: 10px;
+      padding: 12px;
       margin-top: 30px;
+      font-size: 0.9rem;
+      box-shadow: 0 -2px 10px rgba(0,229,255,0.3);
     }
   </style>
 </head>
