--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background: #000; /* AMOLED black background */
+      background: #000; /* AMOLED black */
       color: #e0f7fa;
     }
     header {
-      background: linear-gradient(90deg, #00e5ff, #000);
+      background: linear-gradient(90deg, #00e5ff 50%, #000 50%);
       color: white;
       text-align: center;
       padding: 25px;
@@ -23,6 +23,7 @@
       margin: 0;
       font-size: 2rem;
       font-weight: bold;
+      text-shadow: 0 0 12px #00e5ff;
     }
     header p {
       margin: 5px 0 0;
@@ -31,34 +32,39 @@
     }
     .container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 25px;
       padding: 30px;
     }
     .card {
-      background: linear-gradient(135deg, #00e5ff, #000);
-      border-radius: 14px;
-      padding: 20px;
+      background: linear-gradient(135deg, #00e5ff 50%, #000 50%);
+      border-radius: 16px;
+      padding: 25px 20px;
       text-align: center;
       color: #e0f7fa;
-      box-shadow: 0 6px 15px rgba(0,229,255,0.5);
+      box-shadow: 0 6px 18px rgba(0,229,255,0.5);
       transition: transform 0.3s, box-shadow 0.3s;
       cursor: pointer;
     }
     .card:hover {
-      transform: translateY(-8px) scale(1.02);
-      box-shadow: 0 8px 25px rgba(0,229,255,0.8);
+      transform: translateY(-8px) scale(1.03);
+      box-shadow: 0 10px 28px rgba(0,229,255,0.9);
+    }
+    .icon {
+      font-size: 2.5rem;
+      margin-bottom: 12px;
+      text-shadow: 0 0 10px rgba(0,229,255,0.8);
     }
     .card h2 {
       margin: 10px 0;
-      font-size: 1.3rem;
+      font-size: 1.25rem;
       color: #e0f7fa;
-      text-shadow: 0 0 8px rgba(0,229,255,0.8);
+      text-shadow: 0 0 6px rgba(0,229,255,0.7);
     }
     .card a {
       display: inline-block;
-      margin-top: 12px;
-      padding: 10px 18px;
+      margin-top: 14px;
+      padding: 10px 20px;
       text-decoration: none;
       background: #00e5ff;
       color: #000;
@@ -68,7 +74,7 @@
     }
     .card a:hover {
       background: #00bcd4;
-      transform: scale(1.05);
+      transform: scale(1.07);
     }
     footer {
       background: #000;
@@ -77,7 +83,7 @@
       padding: 12px;
       margin-top: 30px;
       font-size: 0.9rem;
-      box-shadow: 0 -2px 10px rgba(0,229,255,0.3);
+      box-shadow: 0 -2px 12px rgba(0,229,255,0.4);
     }
   </style>
 </head>
@@ -90,30 +96,37 @@
 
   <div class="container">
     <div class="card">
+      <div class="icon">⚡</div>
       <h2>कार्य और ऊर्जा (Work and Energy)</h2>
       <a href="Work%20and%20energy.html">Start</a>
     </div>
     <div class="card">
+      <div class="icon">🌱</div>
       <h2>KBC स्टाइल (Tissue Quiz)</h2>
       <a href="KBC%20Style%20Tissue.html">Start</a>
     </div>
     <div class="card">
+      <div class="icon">🌱</div>
       <h2>सिंपल UI (Tissue)</h2>
       <a href="Single%20UI%20Tissue.html">Start</a>
     </div>
     <div class="card">
+      <div class="icon">🌱</div>
       <h2>टिश्यू (TISSUES)</h2>
       <a href="TISSUES.html">Start</a>
     </div>
     <div class="card">
+      <div class="icon">🎮</div>
       <h2>एडुगेम्स</h2>
       <a href="edugames.html">Start</a>
     </div>
     <div class="card">
+      <div class="icon">⚡</div>
       <h2>गति के नियम (Laws of Motion)</h2>
       <a href="laws%20of%20motion.html">Start</a>
     </div>
     <div class="card">
+      <div class="icon">⚗️</div>
       <h2>पदार्थ हमारे चारों ओर (Matters Around Us)</h2>
       <a href="EDUGAMES%20Is%20matters%20around%20us%20pure.html">Start</a>
     </div>
