--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
       color: #e0f7fa;
     }
     header {
-      background: linear-gradient(90deg, #00e5ff 50%, #000 50%);
+      background: linear-gradient(135deg, #00e5ff 0%, #000 50%, #00e5ff 100%);
       color: white;
       text-align: center;
       padding: 25px;
-      box-shadow: 0 4px 15px rgba(0, 229, 255, 0.4);
+      box-shadow: 0 4px 18px rgba(0, 229, 255, 0.5);
     }
     header h1 {
       margin: 0;
       font-size: 2rem;
       font-weight: bold;
-      text-shadow: 0 0 12px #00e5ff;
+      text-shadow: 0 0 15px #00e5ff;
     }
     header p {
-      margin: 5px 0 0;
+      margin: 6px 0 0;
       font-size: 1rem;
       color: #b2ebf2;
     }
@@ -37,53 +37,72 @@
       padding: 30px;
     }
     .card {
-      background: linear-gradient(135deg, #00e5ff 50%, #000 50%);
-      border-radius: 16px;
+      background: linear-gradient(135deg, #00e5ff 0%, #000 50%, #00e5ff 100%);
+      border-radius: 18px;
       padding: 25px 20px;
       text-align: center;
       color: #e0f7fa;
-      box-shadow: 0 6px 18px rgba(0,229,255,0.5);
+      box-shadow: 0 6px 20px rgba(0,229,255,0.6);
       transition: transform 0.3s, box-shadow 0.3s;
       cursor: pointer;
+      position: relative;
+      overflow: hidden;
+    }
+    .card::before {
+      content: "";
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle, rgba(0,229,255,0.4) 0%, transparent 70%);
+      transform: rotate(25deg);
+      opacity: 0;
+      transition: opacity 0.4s;
+    }
+    .card:hover::before {
+      opacity: 1;
     }
     .card:hover {
-      transform: translateY(-8px) scale(1.03);
-      box-shadow: 0 10px 28px rgba(0,229,255,0.9);
+      transform: translateY(-10px) scale(1.04);
+      box-shadow: 0 10px 30px rgba(0,229,255,0.9);
     }
     .icon {
-      font-size: 2.5rem;
-      margin-bottom: 12px;
-      text-shadow: 0 0 10px rgba(0,229,255,0.8);
+      font-size: 2.7rem;
+      margin-bottom: 14px;
+      text-shadow: 0 0 12px rgba(0,229,255,0.9);
     }
     .card h2 {
       margin: 10px 0;
-      font-size: 1.25rem;
+      font-size: 1.3rem;
       color: #e0f7fa;
       text-shadow: 0 0 6px rgba(0,229,255,0.7);
     }
     .card a {
       display: inline-block;
-      margin-top: 14px;
-      padding: 10px 20px;
+      margin-top: 15px;
+      padding: 10px 22px;
       text-decoration: none;
       background: #00e5ff;
       color: #000;
       font-weight: bold;
       border-radius: 8px;
       transition: background 0.3s, transform 0.2s;
+      box-shadow: 0 0 12px rgba(0,229,255,0.6);
     }
     .card a:hover {
       background: #00bcd4;
-      transform: scale(1.07);
+      transform: scale(1.08);
+      box-shadow: 0 0 18px rgba(0,229,255,0.9);
     }
     footer {
-      background: #000;
+      background: linear-gradient(90deg, #00e5ff 0%, #000 50%, #00e5ff 100%);
       color: #00e5ff;
       text-align: center;
       padding: 12px;
-      margin-top: 30px;
+      margin-top: 35px;
       font-size: 0.9rem;
-      box-shadow: 0 -2px 12px rgba(0,229,255,0.4);
+      box-shadow: 0 -2px 14px rgba(0,229,255,0.5);
     }
   </style>
 </head>
