--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #e0f7fa;
     }
     header {
-      background: linear-gradient(135deg, #000 0%, #00e5ff 50%, #000 100%);
+      background: linear-gradient(135deg, #000 0%, #000 40%, #00e5ff 50%, #000 60%, #000 100%);
       color: white;
       text-align: center;
       padding: 20px;
@@ -39,7 +39,7 @@
       margin: auto;
     }
     .card {
-      background: linear-gradient(135deg, #000 0%, #00e5ff 50%, #000 100%);
+      background: linear-gradient(135deg, #000 0%, #000 40%, #00e5ff 50%, #000 60%, #000 100%);
       border-radius: 14px;
       padding: 18px 15px;
       text-align: center;
@@ -79,7 +79,7 @@
       box-shadow: 0 0 15px rgba(0,229,255,0.9);
     }
     footer {
-      background: linear-gradient(90deg, #000 0%, #00e5ff 50%, #000 100%);
+      background: linear-gradient(90deg, #000 0%, #000 40%, #00e5ff 50%, #000 60%, #000 100%);
       color: #00e5ff;
       text-align: center;
       padding: 10px;
