--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background: #000; /* AMOLED black */
+      background: #000; /* Pure AMOLED black */
       color: #e0f7fa;
     }
     header {
-      background: linear-gradient(135deg, #000 0%, #000 40%, #00e5ff 50%, #000 60%, #000 100%);
-      color: white;
+      background: #000;
+      color: #00e5ff;
       text-align: center;
       padding: 20px;
-      box-shadow: 0 4px 18px rgba(0, 229, 255, 0.5);
+      border-bottom: 2px solid #00e5ff;
     }
     header h1 {
       margin: 0;
@@ -39,25 +39,25 @@
       margin: auto;
     }
     .card {
-      background: linear-gradient(135deg, #000 0%, #000 40%, #00e5ff 50%, #000 60%, #000 100%);
+      background: #000;
+      border: 2px solid #00e5ff;
       border-radius: 14px;
       padding: 18px 15px;
       text-align: center;
       color: #e0f7fa;
-      box-shadow: 0 4px 14px rgba(0,229,255,0.5);
+      box-shadow: 0 0 10px rgba(0,229,255,0.3);
       transition: transform 0.3s, box-shadow 0.3s;
       cursor: pointer;
-      position: relative;
-      overflow: hidden;
     }
     .card:hover {
       transform: translateY(-6px) scale(1.03);
-      box-shadow: 0 8px 22px rgba(0,229,255,0.8);
+      box-shadow: 0 0 20px rgba(0,229,255,0.9);
+      border-color: #00ffff;
     }
     .card h2 {
       margin: 8px 0;
       font-size: 1.1rem;
-      color: #e0f7fa;
+      color: #00e5ff;
       text-shadow: 0 0 6px rgba(0,229,255,0.7);
     }
     .card a {
@@ -79,13 +79,13 @@
       box-shadow: 0 0 15px rgba(0,229,255,0.9);
     }
     footer {
-      background: linear-gradient(90deg, #000 0%, #000 40%, #00e5ff 50%, #000 60%, #000 100%);
+      background: #000;
       color: #00e5ff;
       text-align: center;
       padding: 10px;
       margin-top: 25px;
       font-size: 0.85rem;
-      box-shadow: 0 -2px 12px rgba(0,229,255,0.5);
+      border-top: 2px solid #00e5ff;
     }
   </style>
 </head>
