--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   </div>
 
   <footer>
-    © 2025 Class 9th Science Games | Developed with ❤️ for Students
+    © 2025 Class 9th Science Games | Developed by cubic istar with ❤️ for Students
   </footer>
 
 </body>
