--- a/index.html
+++ b/index.html
@@ -92,37 +92,37 @@
 <body>
 
   <header>
-    <h1>गेम और टॉपिक चुनें (Select Any Topic)</h1>
-    <p>नीचे दिए गए विकल्पों में से कोई भी चुनें:</p>
+    <h1>Select Any Topic</h1>
+    <p>Choose any of the following:</p>
   </header>
 
   <div class="container">
     <div class="card">
-      <h2>कार्य और ऊर्जा (Work and Energy)</h2>
+      <h2>Work and Energy</h2>
       <a href="Work%20and%20energy.html">Start</a>
     </div>
     <div class="card">
-      <h2>KBC स्टाइल (Tissue Quiz)</h2>
+      <h2>KBC UI Tissue Quiz</h2>
       <a href="KBC%20Style%20Tissue.html">Start</a>
     </div>
     <div class="card">
-      <h2>सिंपल UI (Tissue)</h2>
+      <h2>SMP UI Tissue</h2>
       <a href="Single%20UI%20Tissue.html">Start</a>
     </div>
     <div class="card">
-      <h2>टिश्यू (TISSUES)</h2>
+      <h2>TISSUES</h2>
       <a href="TISSUES.html">Start</a>
     </div>
     <div class="card">
-      <h2>एडुगेम्स</h2>
+      <h2>EDUGAMES</h2>
       <a href="edugames.html">Start</a>
     </div>
     <div class="card">
-      <h2>गति के नियम (Laws of Motion)</h2>
+      <h2>Laws of Motion</h2>
       <a href="laws%20of%20motion.html">Start</a>
     </div>
     <div class="card">
-      <h2>पदार्थ हमारे चारों ओर (Matters Around Us)</h2>
+      <h2>Is matters around us pure?</h2>
       <a href="EDUGAMES%20Is%20matters%20around%20us%20pure.html">Start</a>
     </div>
   </div>
