--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Class 9th Science – Main Menu</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Orbitron', sans-serif;
       margin: 0;
       padding: 0;
       background: #000; /* Pure AMOLED black */
